Modify Back grand picture.

--- a/css/style.less
+++ b/css/style.less
@@ -161,6 +161,13 @@ body {
             padding: 0;
             display: inline-block;
           }
+          &#btnImport {
+            width: 37px;
+            height: 37px;
+            border-radius: 50%;
+            padding: 0;
+            display: inline-block;
+          }          
         }
       }
     }
