--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ html {
 }
 
 body {
-    background: #FFC21C;
+    background: #61a8f8;
     height: 100%;
     width: 100%;
     margin: 0;
@@ -336,6 +336,14 @@ body > div > footer > div > button#btnStart {
 }
 
 body > div > footer > div > button#btnReset {
+    width: 37px;
+    height: 37px;
+    border-radius: 50%;
+    padding: 0;
+    display: inline-block;
+}
+
+body > div > footer > div > button#btnmport {
     width: 37px;
     height: 37px;
     border-radius: 50%;
