--- a/css/style.css
+++ b/css/style.css
@@ -403,3 +403,6 @@ body > div > footer > div > button#btnImport {
     display: inline-block;
 }
 
+#select_file{
+    border:0px;display:none;
+  }
