--- a/css/style.css
+++ b/css/style.css
@@ -345,6 +345,7 @@ body > div > footer {
     height: 20%;
     text-align: center;
     vertical-align: middle;
+    margin-top: -10px;
 }
 
 body > div > footer > div {
@@ -363,8 +364,9 @@ body > div > footer > div > input {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    width: 172px;
-    margin-right: 16px;
+    width: 165px;
+    height: 0px;
+    margin-right: 30px;
 }
 
 body > div > footer > div > button {
@@ -375,11 +377,13 @@ body > div > footer > div > button {
     height: 3rem;
     border-radius: 1rem;
     font-size: 1rem;
+
 }
 
 body > div > footer > div > button#btnStart {
-    width: 305px;
-    margin-right: 16px;
+    height: 0px;
+    width: 280px;
+    margin-right: 50px;
     color: white;
 }
 
@@ -388,6 +392,7 @@ body > div > footer > div > button#btnReset {
     height: 37px;
     border-radius: 50%;
     padding: 0;
+    margin-left: 0px;
     display: inline-block;
 }
 
@@ -396,6 +401,7 @@ body > div > footer > div > button#btnImport {
     height: 37px;
     border-radius: 50%;
     padding: 0;
+    margin-left: 30px;
     display: inline-block;
 }
 
